fix wrapping for about section

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -20,19 +20,21 @@
 }
 
 .help-sections {
-  width: 80%;
   margin: auto;
 }
 
 .help-section {
+  max-width: 400px;
   width: 100%;
   align-items: center;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 @media screen and (min-width: 600px) {
   .help-sections {
     display: flex;
+    flex-wrap: wrap;
   }
   .help-section {
     padding: 20px;
